--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastgoo/getui-php",
+  "name": "zhoukaijie/getui-php",
   "type": "library",
   "description": "个推PHP扩展包",
   "keywords": [
